bad/return_string_in_func_returning_array.example_compiler_output
ERROR
[1mbad/return_string_in_func_returning_array.lat:2:24: [1;31merror: [0;1mreturned value of type `string` is not convertible to return type `int[]`[m
int[] test() { return ""; }
                       [1;32m^[m
